Changes to CSS and HTML including layout and new parts of the page

--- a/style.css
+++ b/style.css
@@ -14,12 +14,15 @@
     font-size: 48px;
     font-weight: bold;
     color: #f9faf8;
+    display: flex;
 }
 
 .hero-secondary {
     font-size: 18px;
     color: #e5e7eb;
     font-weight: lighter;
+    flex: 1;
+    margin-top: 10px;
 
 }
 
@@ -32,6 +35,9 @@
 
 .body {
     margin: 0;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -48,13 +54,15 @@ button {
 .info {
     font-size: 36px;
     font-weight: bolder;
+    color: #1f2937
 }
 
 .quote {
     font-size: 36px;
     font-style: italic;
-    font-weight: lighter;
+    font-weight: 100;
     color: #1f2937;
+    background-color: #e5e7eb;
 }
 
 ul {
@@ -82,12 +90,38 @@ a {
 .pic1-container {
     flex: 1;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
-  flex-direction: column;
 }
 img {
-    max-width: 100%;
-    height: auto;
+    max-width: 50%;
+    max-height: 50%;
   }
   
+  .main {
+    background-color: #e5e7eb;
+    min-height: 100vh; /* Set a minimum height to fill the viewport */
+    display: flex;
+    flex-direction: column;
+}
+
+
+.card {
+    border: none;
+  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  border-radius: 4px;
+  width: 300px;
+  padding: 10px;
+  margin: 16px;
+  font-size: 12px;
+  font-weight: 100;
+  flex-direction: row;
+}
+
+.quote {
+    background-color: #e5e7eb;
+}
+
+body {
+    margin: 0;
+}
