--- a/style.css
+++ b/style.css
@@ -99,29 +99,42 @@ img {
   }
   
   .main {
-    background-color: #e5e7eb;
+    background-color: white;
     min-height: 100vh; /* Set a minimum height to fill the viewport */
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
 .card {
     border: none;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
-  width: 300px;
-  padding: 10px;
-  margin: 16px;
-  font-size: 12px;
-  font-weight: 100;
-  flex-direction: row;
+    box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
+    margin: 16px;
+    font-size: 12px;
+    font-weight: 100;
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 30px;
 }
+
 
 .quote {
     background-color: #e5e7eb;
+    padding: 10px 50px;
 }
 
 body {
     margin: 0;
+}
+
+
+.card-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
