--- a/style.css
+++ b/style.css
@@ -225,10 +225,10 @@ button {
     border: none;
     border-radius: 16px;
     padding: 8px 25px;
-    justify-content: center;
-    align-items: center;
     color: #e5e7eb;
     max-width: 100px;
+    position: relative;
+    overflow: hidden;
 }
 
 button:hover {
@@ -237,6 +237,30 @@ button:hover {
 
 button:active {
     background-color: #bcc3e8;
+}
+
+button::after {
+    content: "";
+    position: absolute;
+    top: 80%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    background-color: rgba(255, 255, 255, 0.3);
+    opacity: 1;
+    animation: pulse 3s ease-in-out infinite;
+}
+  
+@keyframes pulse {
+    0% {
+      transform: scale(0);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(3);
+      opacity: 0;
+    }
 }
 
 .main {
