--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-bottom: 15px;
 }
 
 .right-links {
@@ -52,6 +53,10 @@ body {
     gap: 80px;
 }
 
+.hero-backdrop{
+    background-image: url(resources/header.svg);
+}
+
 .text-hero {
     display: flex;
     justify-content: center;
@@ -70,7 +75,7 @@ body {
 }
 
 .content img {
-    min-width: 200px;
+    min-width: 300px;
     max-width: 80%;
     width: auto;
     height: auto;
@@ -94,7 +99,7 @@ body {
     border: none;
     box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
     margin: 16px;
-    font-size: 12px;
+    font-size: 18px;
     font-weight: 100;
     flex-direction: row;
     display: flex;
@@ -111,8 +116,8 @@ body {
     background-color: #e5e7eb;
     justify-content: center;
     width: 100vw;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .quote {
@@ -148,7 +153,8 @@ body {
     color: #e5e7eb;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
+    margin-top: 100px;
     gap: 20px;
     font-weight: bold;
 }
@@ -273,4 +279,36 @@ button::after {
 
 .images_cards .content img {
     filter: drop-shadow(20px 10px 8px #b0b0b1);
+}
+
+.spacer {
+    aspect-ratio: 960/100;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.layer1 {
+    background-image: url(resources/wave1.svg);
+}
+
+.layer2  {
+    background-image: url(resources/wave4.svg);
+}
+
+.layer3 {
+    background-image: url(resources/wave5.svg);
+}
+
+.layer_bottom {
+    background-image: url(resources/layer_bottom.svg);
+}
+
+.small_spacer{
+    aspect-ratio: 960/50;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
